[package]
name = "blake2"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.9.0", default-features = false }
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.0.1" }
hex = "0.4"
blake2b-ref = { version = "0.1", default-features = false }
